# SPDX-License-Identifier: BSD-3-Clause
# Copyright Contributors to the OpenEXR Project.

module(
    name = "openexr",
    compatibility_level = 1,
)

archive_override(
    module_name = "c-blosc2",
    patches = [
        "//bazel:c-blosc2_add_build_file.patch",
        "//bazel:c-blosc2_module_dot_bazel.patch",
    ],
    strip_prefix = "c-blosc2-main",
    urls = ["https://github.com/Blosc/c-blosc2/archive/refs/heads/main.zip"],
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "imath", version = "3.2.2")
bazel_dep(name = "libdeflate", version = "1.24")
bazel_dep(name = "openjph", version = "0.24.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
