# SPDX-License-Identifier: BSD-3-Clause
# Copyright Contributors to the OpenEXR Project.

module(
    name = "openexr",
    compatibility_level = 1,
)

# Toggle this to fetch the NVIDIA libdeflate fork, then update OPENEXR_ENABLE_GDEFLATE in BUILD.bazel.
_enable_gdeflate = False

_enable_gdeflate and archive_override(
    module_name = "libdeflate",
    patches = [
        "//bazel:libdeflate_gdeflate_add_build_file.patch",
        "//bazel:libdeflate_module_dot_bazel.patch",
    ],
    strip_prefix = "libdeflate-gdeflate",
    urls = ["https://github.com/NVIDIA/libdeflate/archive/refs/heads/gdeflate.zip"],
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "imath", version = "3.2.2")
bazel_dep(name = "libdeflate", version = "1.24")
bazel_dep(name = "openjph", version = "0.24.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
