# SPDX-License-Identifier: BSD-3-Clause
# Copyright Contributors to the OpenEXR Project.

module(
    name = "openexr",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "imath", version = "3.2.2")
bazel_dep(name = "libdeflate", version = "1.25")
bazel_dep(name = "openjph", version = "0.25.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
