## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	Half HalfTest \
	Iex IexTest \
	Imath ImathTest \
	IlmThread IlmThreadTest \
	config

EXTRA_DIST = \
	AUTHORS COPYING ChangeLog INSTALL LICENSE NEWS \
        README README.CVS README.OSX bootstrap

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = IlmBase.pc

