## Process this file with automake to produce Makefile.in

SUBDIRS = Half HalfTest Iex IexTest IlmImf IlmImfTest Imath ImathTest \
	  exrdisplay exrheader exrmaketiled IlmImfExamples doc vc \
	  exrstdattr exrmakepreview exrenvmap

EXTRA_DIST = bootstrap README.win32 README.OSX README.CVS LICENSE openexr.m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = OpenEXR.pc

m4datadir = $(datadir)/aclocal
m4data_DATA = openexr.m4

